Bug 359990 - IMAP Hostname change clears disconnected cache
Summary: IMAP Hostname change clears disconnected cache
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: IMAP resource (other bugs)
Version First Reported In: GIT (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Christian Mollekopf
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-02 10:40 UTC by Andre Heinecke
Modified: 2017-01-07 13:52 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andre Heinecke 2016-03-02 10:40:27 UTC
I'm currently having to resync several gigabytes of mail because the hostname of my imap server changed.

This was surprising and had I known this I would have just changed the DNS entry for the server. Isn't there a better way to figure out this is a new server?

Or can the user be asked "Should this be treated as a different account?" I'm not sure what would happen though if it's really a different account and the user says no to that question. Probably nothing good ;-)

I think the trigger for this (or the place for a warning) would be in ImapResouce::onConfigurationDone but I might misreading the code.

Reproducible: Always

Steps to Reproduce:
1. Change hostname of server in imap account
2. Apply settings


Expected Results:  
At the very least a warning.
Comment 1 Daniel Vrátil 2017-01-07 13:13:58 UTC
The rather rare case of changing hostname is not worth the amount of work needed to detect that it is the same server with the same account and with identical data.

I will add a confirmation when user changes a hostname in the configuration dialog.
Comment 2 Daniel Vrátil 2017-01-07 13:52:32 UTC
Git commit 8a4894d8d95d323af9972cea02a845af3cbf3928 by Daniel Vrátil.
Committed on 07/01/2017 at 13:27.
Pushed by dvratil into branch 'master'.

IMAP: ask for confirmation when user changes hostname or username

When hostname or username changes we trigger full re-sync of everything.
To make sure users are aware of that, ask for confirmation to prevent
downloading possibly lots of data when user does not expect it.
FIXED-IN: 5.5.0

M  +22   -3    resources/imap/setupserver.cpp

https://commits.kde.org/kdepim-runtime/8a4894d8d95d323af9972cea02a845af3cbf3928