IMAP: ask for confirmation when user changes hostname or username

When hostname or username changes we trigger full re-sync of everything.
To make sure users are aware of that, ask for confirmation to prevent
downloading possibly lots of data when user does not expect it.

BUG: 359990
FIXED-IN: 5.5.0